@@ -47,8 +47,8 @@ struct nlist {
 extern void plain_hash_free (void *defn);
 
 extern struct hashtable *hash_create (hash_free_ptr free_defn);
-extern struct nlist *hash_lookup (const struct hashtable *ht,
-				  const char *s, size_t len);
+extern void *hash_lookup (const struct hashtable *ht,
+			  const char *s, size_t len);
 extern struct nlist *hash_install (struct hashtable *ht,
 				   const char *name, size_t len, void *defn);
 extern void hash_remove (struct hashtable *ht, const char *s, size_t len);
